# trading_etf

./: .gitignore  CODING_STANDARDS.md  CONTEXT.md  README.md  RESEARCH_LOG.md  SETUP.md  pyproject.toml  requirements.txt  setup.py
docs/: FEATURES.md  LITERATURE_SEARCH_PROMPT.md  V0.1_LESSONS_LEARNED.md  V0.2_MULTI_AGENT_DESIGN.md  WEEKLY_UPDATE.md
experiments/exp001/: config.json
notebooks/: analyst_databricks.py  analyst_databricks_confirmed.py  sample_candidates.csv  test_local.py
scripts/: weekly_update.sh
src/: __init__.py
src/analyst/: __init__.py  graph.py  instrumentation.py  logging_config.py  run.py
src/backtesting/: experiment_runner.py  mean_reversion_backtester.py  portfolio_backtester.py
src/data/: alpaca_source.py  data_source_factory.py  etf_filter.py  market_data_source.py  metadata_manager.py  symbol_filter.py  symbol_list_manager.py  weekly_feature_engineering.py
src/models/: __init__.py
src/reports/: etf_retrospective_20260126.md  etf_retrospective_20260203.md  etf_retrospective_20260209.md
src/strategies/: base_strategy.py  momentum_strategy.py  strategy_factory.py
src/training/: __init__.py  cross_validator.py  data_loader.py  evaluator.py  feature_builder.py  model_factory.py  normalizer.py  prediction_analyzer.py  visualizer.py
src/utils/: __init__.py  date_utils.py  device.py
src/visualization/: portfolio_visualizer.py
src/workflow/: 00-get-etf-universe.py  01-filter-etf-universe.py  02-fetch-daily-data.py  02a-analyze-data-coverage.py  03-generate-features.py  04-visualize-features.py  05-build-feature-matrix.py  (+15 more)
(+29 files in other folders)
